--- a/flask/html/index.html
+++ b/flask/html/index.html
@@ -1,20 +1,30 @@
-
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Psiclipe</title>
-</head>
+<html lang="pt-br">
+  <head>
+    <title>Psiclipe - Multimídia</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container " style="height: 100vh;">
+      <div class="d-flex justify-content-center">
+        <h1 class="h1"> Psiclipe - Multimídia </h1>
+      </div>
+      <div class="col-12">
+        <div class="col-md-8 offset-md-2">
+            <input id="txtMusicName" type="text" class="form-control" placeholder="Insira a música" aria-label="MusicName" aria-describedby="basic-addon1">
+        </div>
+        <br>
+        <div class="d-flex justify-content-center">
+            <button id="button" type="submit" class="btn btn-success">Buscar</button>
+        </div>
+      </div>
+    </div>
 
-<body>
-<form method="POST">
-	<div align="center">
-		<h2> Psiclipe </h2>
-	    Nome da música: <input type="text" name="musicName">
-	    <input type="submit" value = "Buscar">
-	</div>
-</form>
-
-</body>
-
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
