--- a/flask/html/index.html
+++ b/flask/html/index.html
@@ -32,7 +32,10 @@
             </select>
           </div>
           <div class="col-md-8 offset-md-2">
-            <label> Deepdream: <input type="checkbox" name="deepDreamOp" value="select"></label>
+            <label id="checkDream"> Deepdream: <input id="checkDreamCheck" type="checkbox" name="deepDreamOp" value="select">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label name="checkDreamFrames" style="display: none"> 1 frame: <input type="radio" name="deepDreamOpFrame" value="1" checked></label>
+            <label name="checkDreamFrames" style="display: none"> 5 frames: <input type="radio" name="deepDreamOpFrame" value="5"></label>
+            <label name="checkDreamFrames" style="display: none"> 10 frames: <input type="radio" name="deepDreamOpFrame" value="10"></label>
           </div>
           <br>
           <div class="d-flex justify-content-center">
@@ -42,7 +45,22 @@
       </form>
     </div>
 
-    
+    <script type="text/javascript">
+    var deepCheck = document.getElementById("checkDreamCheck");
+    var deepFrames = document.getElementsByName("checkDreamFrames");
+    deepCheck.addEventListener("click", function(e) {
+      // print('testandooo');
+      if(deepCheck.checked){
+        deepFrames[0].style.display = 'inline';
+        deepFrames[1].style.display = 'inline';
+        deepFrames[2].style.display = 'inline';
+      }else{
+        deepFrames[0].style.display = 'none';
+        deepFrames[1].style.display = 'none';
+        deepFrames[2].style.display = 'none';
+      }
+    });
+    </script>    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
