implantado opcao de lyric no video

--- a/flask/html/index.html
+++ b/flask/html/index.html
@@ -32,7 +32,8 @@
             </select>
           </div>
           <div class="col-md-8 offset-md-2">
-            <label id="checkDream"> Deepdream: <input id="checkDreamCheck" type="checkbox" name="deepDreamOp" value="select">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label > Lyrics: <input id="checkLyric" type="checkbox" name="lyricOp" value="select">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label id="checkDream"> Deepdream: <input id="checkDreamCheck" type="checkbox" name="deepDreamOp" value="select">&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <label name="checkDreamFrames" style="display: none"> 1 frame: <input type="radio" name="deepDreamOpFrame" value="1" checked></label>
             <label name="checkDreamFrames" style="display: none"> 5 frames: <input type="radio" name="deepDreamOpFrame" value="5"></label>
             <label name="checkDreamFrames" style="display: none"> 10 frames: <input type="radio" name="deepDreamOpFrame" value="10"></label>
