mudança de nomes no projeto

--- a/flask/html/index.html
+++ b/flask/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Psiclipe - Multimídia</title>
+    <title>Psiclipe</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -9,7 +9,7 @@
   <body>
     <div class="container " style="height: 100vh;">
       <div class="d-flex justify-content-center">
-        <h1 class="h1"> Psiclipe - Multimídia </h1>
+        <h1 class="h1"> Psiclipe </h1>
       </div>
       <form method="POST">
         <div class="col-12">
@@ -50,7 +50,7 @@
     var deepCheck = document.getElementById("checkDreamCheck");
     var deepFrames = document.getElementsByName("checkDreamFrames");
     deepCheck.addEventListener("click", function(e) {
-      // print('testandooo');
+      
       if(deepCheck.checked){
         deepFrames[0].style.display = 'inline';
         deepFrames[1].style.display = 'inline';
